2013-02-27  John Bauman  <jbauman@chromium.org>

        Plugin in iframe may not display
        https://bugs.webkit.org/show_bug.cgi?id=109879

        Reviewed by Simon Fraser.

        Update geometry when cliprect changes.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::clipRectChanged):
        * WebProcess/Plugins/PluginView.h:

2013-02-27  Jer Noble  <jer.noble@apple.com>

        REGRESSION (48533): Full-frame plugins stopped working (download instead of loading the plugin)
        https://bugs.webkit.org/show_bug.cgi?id=111003

        Reviewed by Anders Carlsson.

        Also query the Page's pluginData when determining whether a given MIME type can be shown.

        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
        (WKBundlePageCanShowMIMEType):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::canShowMIMEType):
        * WebProcess/WebPage/WebPage.h:

2013-02-27  Manuel Rego Casasnovas  <rego@igalia.com>

        Add smartInsertDeleteEnabled setting to WebCore::Page
        https://bugs.webkit.org/show_bug.cgi?id=107840

        Reviewed by Ryosuke Niwa.

        * Shared/WebPageCreationParameters.cpp:
        (WebKit::WebPageCreationParameters::encode):
        (WebKit::WebPageCreationParameters::decode): Remove code related to
        isSmartInsertDeleteEnabled.
        * Shared/WebPageCreationParameters.h:
        (WebPageCreationParameters): Remove isSmartInsertDeleteEnabled.
        * Shared/WebPreferencesStore.h:
        (WebKit): Add macro for smartInsertDeleteEnabled setting.
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesSetSmartInsertDeleteEnabled):
        (WKPreferencesGetSmartInsertDeleteEnabled): Implement methods using the
        new setting.
        * UIProcess/API/C/WKPreferencesPrivate.h: Add new methods headers.
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::initializeWebPage): Set smartInsertDeleteEnabled