@@ -76,6 +76,7 @@ MESSAGE_RECEIVERS = \
     PluginProcessConnectionManager.messages.in \
     PluginProcessProxy.messages.in \
     PluginProxy.messages.in \
+    StorageAreaProxy.messages.in \
     StorageManager.messages.in \
     WebApplicationCacheManager.messages.in \
     WebApplicationCacheManagerProxy.messages.in \
