@@ -162,6 +162,8 @@ webkit2_built_sources += \
 	DerivedSources/WebKit2/PluginProcessProxyMessages.h \
 	DerivedSources/WebKit2/PluginProxyMessageReceiver.cpp \
 	DerivedSources/WebKit2/PluginProxyMessages.h \
+	DerivedSources/WebKit2/StorageAreaProxyMessageReceiver.cpp \
+	DerivedSources/WebKit2/StorageAreaProxyMessages.h \
 	DerivedSources/WebKit2/StorageManagerMessageReceiver.cpp \
 	DerivedSources/WebKit2/StorageManagerMessages.h \
 	DerivedSources/WebKit2/WebApplicationCacheManagerMessageReceiver.cpp \
@@ -1117,6 +1119,8 @@ webkit2_sources += \
 	Source/WebKit2/WebProcess/Plugins/PluginView.h \
 	Source/WebKit2/WebProcess/ResourceCache/WebResourceCacheManager.h \
 	Source/WebKit2/WebProcess/ResourceCache/WebResourceCacheManager.cpp \
+	Source/WebKit2/WebProcess/Storage/StorageAreaProxy.cpp \
+	Source/WebKit2/WebProcess/Storage/StorageAreaProxy.h \
 	Source/WebKit2/WebProcess/Storage/StorageNamespaceProxy.h \
 	Source/WebKit2/WebProcess/Storage/WebKeyValueStorageManager.cpp \
 	Source/WebKit2/WebProcess/Storage/WebKeyValueStorageManager.h \
